--- a/synapse_os.html
+++ b/synapse_os.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
-    <title>Synapse OS - AI餐饮操作系统</title>
+    <title>Panshaker Services</title>
+    <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
     <!-- Fonts -->
     <style>
         @font-face {
             font-family: 'MyBrandFont';
-            src: url('myfont.ttf') format('truetype');
+            src: url('assets/fonts/myfont.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
 
         @font-face {
             font-family: 'LogoFont';
-            src: url('logo.otf') format('opentype');
+            src: url('assets/fonts/logo.otf') format('opentype');
             font-weight: normal;
             font-style: normal;
         }
@@ -164,11 +165,9 @@
             font-size: 64px;
         }
 
-        /* Gradient text for secondary part of headline */
+        /* Text accent style */
         .gradient-text {
-            background: linear-gradient(135deg, #fff 30%, #6e6e73 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: rgba(255, 255, 255, 0.7);
         }
 
         .hero-logo-img {
@@ -1148,14 +1147,14 @@
     <header>
         <div class="nav-inner">
             <div class="logo">
-                <span style="font-family:'LogoFont'; color:var(--brand-blue); letter-spacing: -1px;">PanShaker</span>
+                <span style="font-family:'LogoFont'; color:var(--brand-blue); letter-spacing: -1px;">Panshaker</span>
                 <span style="font-family:'LogoFont'; color:var(--brand-green); margin-left: 6px; letter-spacing: -1px;">Services</span>
             </div>
             <nav class="nav-links">
                 <a href="#products">产品</a>
                 <a href="#features">功能特性</a>
                 <a href="#stories">客户案例</a>
-                <a href="index.html">了解PanShaker</a>
+                <a href="index.html">了解Panshaker</a>
                 <a href="about.html">关于我们</a>
                 <a href="#demo">预约演示</a>
             </nav>
@@ -1165,14 +1164,14 @@
     <!-- Hero Section -->
     <section class="hero-os">
         <div class="hero-content-wrapper" style="max-width: 980px; margin: 0 auto;">
-            <img src="synapseoslogo.png" alt="Synapse OS Logo" class="hero-logo-img" style="width: 400px !important; margin-bottom: 50px !important;">
+            <img src="assets/images/synapseoslogo.png" alt="Synapse OS Logo" class="hero-logo-img" style="width: 400px !important; margin-bottom: 50px !important;">
             <h1 style="font-size: 64px; font-weight: 600; margin: 30px 0 30px 0; line-height: 1.1;">
                 为智能餐饮而生
             </h1>
             <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 30px;">
                 <p style="font-size: 18px; font-weight: 400; color: #a1a1a6; margin: 0;">专为</p>
                 <div style="display: inline-flex; align-items: baseline;">
-                    <span style="font-family: 'LogoFont', sans-serif; color: rgba(14, 66, 126, 0.9); letter-spacing: -1px; font-size: 20px; filter: brightness(0) invert(1);">PanShaker</span>
+                    <span style="font-family: 'LogoFont', sans-serif; color: rgba(14, 66, 126, 0.9); letter-spacing: -1px; font-size: 20px; filter: brightness(0) invert(1);">Panshaker</span>
                     <span style="font-family: 'LogoFont', sans-serif; color: rgba(98, 186, 70, 0.9); margin-left: 6px; letter-spacing: -1px; font-size: 20px; filter: brightness(0) invert(1);">Services</span>
                     <sup style="font-size: 10px; margin-left: 2px; font-family: sans-serif; color: #a1a1a6; font-weight: 400;">™</sup>
                 </div>
@@ -1184,7 +1183,7 @@
             </p>
             <div style="margin-top: 40px; display: flex; gap: 40px; justify-content: center;">
                 <a href="#demo" style="font-size: 18px; color: #fff; text-decoration: none; font-weight: 500; transition: opacity 0.3s;" onmouseover="this.style.opacity='0.7'" onmouseout="this.style.opacity='1'">预约演示</a>
-                <a href="index.html" style="font-size: 18px; color: #fff; text-decoration: none; font-weight: 500; transition: opacity 0.3s;" onmouseover="this.style.opacity='0.7'" onmouseout="this.style.opacity='1'">了解PanShaker</a>
+                <a href="index.html" style="font-size: 18px; color: #fff; text-decoration: none; font-weight: 500; transition: opacity 0.3s;" onmouseover="this.style.opacity='0.7'" onmouseout="this.style.opacity='1'">了解Panshaker</a>
             </div>
         </div>
     </section>
@@ -1267,7 +1266,7 @@
         </div>
 
         <!-- Background Decoration -->
-        <div style="position: absolute; top: 0; right: 0; width: 50%; height: 100%; background: radial-gradient(circle at center, rgba(98, 186, 70, 0.05) 0%, transparent 70%); pointer-events: none;"></div>
+        <div style="position: absolute; top: 0; right: 0; width: 50%; height: 100%; background: rgba(98, 186, 70, 0.03); pointer-events: none;"></div>
     </section>
 
     <style>
@@ -1351,7 +1350,7 @@
                     <div class="switch-card-item" data-target="3">
                         <div class="switch-card-item-title">智能炒菜餐厅</div>
                         <div class="switch-card-item-content">
-                            <p style="color: #666; margin-bottom: 15px;">PanShaker机器人精准控制</p>
+                            <p style="color: #666; margin-bottom: 15px;">Panshaker机器人精准控制</p>
                             <a href="#" style="color: var(--brand-green); font-size: 14px; text-decoration: none;">了解更多 →</a>
                         </div>
                     </div>
@@ -1375,12 +1374,12 @@
 
                 <!-- Right Side - Images -->
                 <div class="switch-card-right" style="position: relative; height: 600px; border-radius: 12px; overflow: hidden; box-shadow: 0 20px 60px rgba(0,0,0,0.15); background: #f5f5f5;">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 131934.png" alt="快餐服务" class="switch-card-image active" data-index="0" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 1; transition: opacity 0.5s ease;">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 131951.png" alt="正餐服务" class="switch-card-image" data-index="1" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 132040.png" alt="茶饮甜品店" class="switch-card-image" data-index="2" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 132010.png" alt="智能炒菜餐厅" class="switch-card-image" data-index="3" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 131913.png" alt="火锅自助餐" class="switch-card-image" data-index="4" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 131934.png" alt="连锁餐饮" class="switch-card-image" data-index="5" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 131934.png" alt="快餐服务" class="switch-card-image active" data-index="0" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 1; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 131951.png" alt="正餐服务" class="switch-card-image" data-index="1" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 132040.png" alt="茶饮甜品店" class="switch-card-image" data-index="2" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 132010.png" alt="智能炒菜餐厅" class="switch-card-image" data-index="3" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 131913.png" alt="火锅自助餐" class="switch-card-image" data-index="4" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 131934.png" alt="连锁餐饮" class="switch-card-image" data-index="5" style="position: absolute; width: 100%; height: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease;">
                 </div>
             </div>
         </div>
@@ -1456,7 +1455,7 @@
         <div style="max-width: 1200px; margin: 0 auto; text-align: center;">
             <h2 class="section-headline" style="color: #1d1d1f; margin-bottom: 30px;">适配您业务的智能硬件</h2>
             <p class="section-subhead" style="color: #86868b; margin-bottom: 40px;">
-                从POS系统到PanShaker机器人，全方位智能化解决方案
+                从POS系统到Panshaker机器人，全方位智能化解决方案
             </p>
             <a href="#" style="color: var(--brand-blue); font-size: 18px; text-decoration: none; font-weight: 500;">了解更多 →</a>
         </div>
@@ -1471,7 +1470,7 @@
             <!-- Screenshot 1: AI Assistant -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 131913.png" alt="Synapse AI 助手" loading="lazy">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 131913.png" alt="Synapse AI 助手" loading="lazy">
                 </div>
                 <div class="screenshot-content">
                     <h3>AI 神经中枢</h3>
@@ -1486,17 +1485,17 @@
                     <p>一屏掌握全局运营数据。今日订单数、营业额、客单价、完成率，关键指标实时刷新。智能化数据洞察，助力精准决策。</p>
                 </div>
                 <div class="device-frame">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 131934.png" alt="实时仪表盘" loading="lazy">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 131934.png" alt="实时仪表盘" loading="lazy">
                 </div>
             </div>
 
-            <!-- Screenshot 3: PanShaker Robot Control -->
+            <!-- Screenshot 3: Panshaker Robot Control -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 131951.png" alt="PanShaker 机器人控制中心" loading="lazy">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 131951.png" alt="Panshaker 机器人控制中心" loading="lazy">
                 </div>
                 <div class="screenshot-content">
-                    <h3>PanShaker 智能炒锅</h3>
+                    <h3>Panshaker 智能炒锅</h3>
                     <p>机器人实时状态监控，油温精准控制到 0.1°C。系统直接下发 G-Code 指令，确保每一道菜品的标准化出品。物理级库存扣减，防止超卖。</p>
                 </div>
             </div>
@@ -1508,14 +1507,14 @@
                     <p>一个界面统管所有外卖订单。无缝对接 Uber Eats、DoorDash、饿了么等主流平台，告别多平板混乱。自动接单、智能调度，让外卖运营更高效。</p>
                 </div>
                 <div class="device-frame">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 132010.png" alt="外卖聚合平台" loading="lazy">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 132010.png" alt="外卖聚合平台" loading="lazy">
                 </div>
             </div>
 
             <!-- Screenshot 5: Customer Management -->
             <div class="screenshot-item fade-in-scroll">
                 <div class="device-frame">
-                    <img src="Screenshots Synapse/屏幕截图 2026-01-28 132040.png" alt="顾客管理系统" loading="lazy">
+                    <img src="assets/screenshots/屏幕截图 2026-01-28 132040.png" alt="顾客管理系统" loading="lazy">
                 </div>
                 <div class="screenshot-content">
                     <h3>口味数字孪生</h3>
@@ -1606,10 +1605,10 @@
                 <video 
                     controls 
                     preload="metadata" 
-                    poster="Screenshots Synapse/屏幕截图 2026-01-28 131934.png"
+                    poster="assets/screenshots/屏幕截图 2026-01-28 131934.png"
                     playsinline
                     controlslist="nodownload">
-                    <source src="Screenshots Synapse/屏幕录制 2026-01-28 131820.mp4" type="video/mp4">
+                    <source src="assets/screenshots/屏幕录制 2026-01-28 131820.mp4" type="video/mp4">
                     您的浏览器不支持 HTML5 视频播放。请升级您的浏览器。
                 </video>
             </div>
@@ -1651,7 +1650,7 @@
                         <a href="#" style="font-size: 12px; color: #86868b;">POS系统</a>
                         <a href="#" style="font-size: 12px; color: #86868b;">自助点餐机</a>
                         <a href="#" style="font-size: 12px; color: #86868b;">在线订餐</a>
-                        <a href="#" style="font-size: 12px; color: #86868b;">PanShaker机器人</a>
+                        <a href="#" style="font-size: 12px; color: #86868b;">Panshaker机器人</a>
                         <a href="#" style="font-size: 12px; color: #86868b;">会员忠诚度</a>
                     </div>
                 </div>
@@ -1672,7 +1671,7 @@
                     <h4 style="font-size: 14px; font-weight: 600; color: #1d1d1f; margin-bottom: 20px;">关于Synapse OS</h4>
                     <div style="display: flex; flex-direction: column; gap: 12px;">
                         <a href="about.html" style="font-size: 12px; color: #86868b;">关于我们</a>
-                        <a href="index.html" style="font-size: 12px; color: #86868b;">了解PanShaker</a>
+                        <a href="index.html" style="font-size: 12px; color: #86868b;">了解Panshaker</a>
                         <a href="#demo" style="font-size: 12px; color: #86868b;">预约演示</a>
                     </div>
                 </div>
@@ -1694,7 +1693,7 @@
                     <span style="font-family: sans-serif;">©</span> 2026 Synapse OS. All rights reserved.
                 </p>
                 <p style="font-size: 12px; color: #86868b; margin-top: 10px;">
-                    Designed for <a href="index.html" style="color: var(--brand-blue);">PanShaker Services</a>
+                    Designed for <a href="index.html" style="color: var(--brand-blue);">Panshaker Services</a>
                 </p>
             </div>
         </div>
@@ -1830,6 +1829,8 @@
         });
     </script>
 
+    <script src="js/device.js"></script>
+    <script src="js/i18n.js"></script>
 </body>
 
 </html>
